# bottega-ddd-modulith

./: .importlinter  Makefile  README.md  TASKS.md  c2.puml  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  temporal_worker.py  temporal_workflow_run.py
auditor/: check.py  due_payments.py  snowflake_gateway.py
diagrams/: aggregate.puml  application_services.puml  chain_of_responsibility.puml  chain_of_responsibility_example.puml  facade.puml  factory.puml  gateway.puml  gateway_before.puml  mediator_sequence.puml  negotiation_sequence.puml  repository_collection.puml  repository_persistence.puml  state.puml  strategy.puml  template_method.puml  use_cases_interactor.puml  value_object.puml
examples/: application_service.py  events.py  facade.py  hexagon.py  lagom_example.py  state.py  use_cases_interactors.py
tests/: conftest.py  test_commission_calculation.py  test_jobs_client.py  test_used_stuff_market.py
tests/acceptance/: app_client.py  conftest.py  features.py  steps.py  test_buying.py  test_likes.py  test_negotiations.py
tests/api/: test_users.py
tests/auditor/: test_due_payments.py  test_prometheus_gateway.py  test_snowflake_gateway.py
tests/availability/: test_availability.py
tests/credits/: test_calculator.py
tests/negotiations/: factories.py  test_negotiation.py  test_negotiation_repository.py  test_price_diff_policies.py  test_service.py  test_strategies.py
tests/payments/: test_payments.py
tests/processes/: test_buying.py
tests/testing_apis/: test_manual.py
used_stuff_market/: jobs_client.py  main.py  utils.py
used_stuff_market/api/: app.py  buying.py  catalog.py  deps.py  items.py  likes.py  negotations.py  orders.py  payments.py  session_deps.py  users.py
used_stuff_market/auditor/: check.py  due_payments.py  prometheus_gateway.py  snowflake_gateway.py
used_stuff_market/availability/: __init__.py  models.py  service.py
used_stuff_market/catalog/: __init__.py  events.py  facade.py  models.py  tasks.py
used_stuff_market/credits/: calculator.py  employment_type.py  scorings.py
used_stuff_market/db/: __init__.py  alembic.ini  guid.py  settings.py  tsvector.py
used_stuff_market/db/migrations/: env.py
used_stuff_market/db/migrations/versions/: 1853eb5186e7_add_usrs.py  4d4800579e1e_add_processes_schema.py  5550392a452c_add_buying_process_manager_state.py  5606eebf14c9_add_placeholder_model.py  561b04d664bc_add_result_column_to_buying_process_.py  562894b9762e_add_payments.py  76fe7c104900_change_resource_id_type.py  b696a6ffe127_seed_migration.py  c8a8cbbc0fc5_add_likes.py
used_stuff_market/foundation/: event_bus.py
used_stuff_market/items/: __init__.py  item.py  repository.py
used_stuff_market/items_infrastructure/: models.py  repository.py
used_stuff_market/likes/: __init__.py  models.py
used_stuff_market/main/: __init__.py  container.py
used_stuff_market/negotiations/: events.py  models.py  negotiation.py  negotiation_id.py  negotiation_repository.py  price_diff_policies.py  repository.py  service.py  strategies.py
used_stuff_market/orders/: __init__.py  calculator.py  delivery_method.py
used_stuff_market/payments/: __init__.py  events.py  models.py
used_stuff_market/processes/: config.py  worker.py
used_stuff_market/processes/buying/: activities.py  events.py  models.py  pm.py  repository.py  state.py  workflow.py
used_stuff_market/reporting/: __init__.py  data.py
used_stuff_market/shared_kernel/: event_bus.py  money.py
used_stuff_market/users/: models.py  registration.py
used_stuff_market/workers/: settings.py  with_celery.py
with_django/: README.md
with_django/used_stuff_market/: manage.py
with_django/used_stuff_market/used_stuff_market/: asgi.py  settings.py  urls.py  wsgi.py
with_fastapi/: README.md
