[project]
name = "used_stuff_market"
version = "0.1.0"
description = ""
authors = [{ name = "Sebastian Buczynski", email = "nnplaya@gmail.com" }]
requires-python = ">=3.13,<4.0"
dependencies = [
    "fastapi[all]",
    "SQLAlchemy",
    "psycopg2-binary",
    "alembic",
    "blinker",
    "kombu",
    "celery[redis]",
    "lagom",
    "bcrypt",
    "attrs",
    "cattrs",
    "pydantic",
    "pymongo",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "pytest",
    "mockito",
    "pytest-mockito",
    "mypy",
    "pytest-cov",
    "pytest-mock",
    "pytest-bdd",
    "factory-boy",
    "pytest-sugar",
    "hypothesis",
    "mutmut",
    "freezegun",
    "prometheus-client",
    "vcrpy",
    "snowflake-connector-python",
    "mypy>=1.10.0,<2",
    "pytest-django>=4.8.0,<5",
    "ruff>=0.12.12",
    "import-linter>=2.4",
    "time-machine>=2.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-p no:sugar"
testpaths = [
    "tests",
]

[tool.mypy]
strict = true
disallow_any_generics = false

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "celery.*",
    "mockito.*",
]
ignore_missing_imports = true
